changes to adviser.html

--- a/public/adviser.html
+++ b/public/adviser.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide - Check if you're eligible for Universal Credit
+    <title>Citizens Advice style guide - Content page
     </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
@@ -44,7 +44,7 @@
       <div class="main-content">
         <main id="main" role="main" class="main-content__right">
           <div class="title">
-            <h1 class="title__heading js-ref"><span class="title__title">Check if you're eligible for Universal Credit</span></h1>
+            <h1 class="title__heading js-ref"><span class="title__title">Content page</span></h1>
           </div>
           <div class="title__subheading">This advice is for 
             <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a><a href="#!" data-track="References" class="a-social-references">References</a>
@@ -55,15 +55,16 @@
           <div>
             <p>Introduction is optional, but for a long format advice page it can be useful to summarise the pages content, this should be kept as a relatively short paragraph that covers what this page of content will do.</p>
             <section id="step1">
-              <h2>First use of &lt;h2&gt; in content</h2>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
               <p>Lorem ipsum dolor sit amet, <span id="overlay_button-1">consectetuer</span> adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
             <section id="step2">
-              <h2>Second use of &lt;h2&gt; in content</h2>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat laoreet dolore magna aliquam erat volutpat. <span id="overlay_button-2">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span></p>
+              <div class="callout--adviser">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</div>
             </section>
             <section id="step3">
-              <h2>Third use of &lt;h2&gt; in content</h2>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
           </div>
