Adviser example pages

--- a/public/adviser-logged-out.html
+++ b/public/adviser-logged-out.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide - Legislation
+    <title>Citizens Advice style guide - Content page
     </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
@@ -30,7 +30,7 @@
     <aside class="section-notice__login">
       <h2 class="screenreader">Notice</h2>
       <div class="section-notice__content">
-        <button type="button" class="btn btn-small"> <a href="adviser-logged-out.html">Adviser logout</a></button>
+        <button type="button" class="btn btn-small"><a href="adviser.html">Adviser login</a></button>
       </div>
     </aside>
     <header class="main-header">
@@ -38,7 +38,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#templates" title="Templates">Templates</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="adviser.html" title="Adviser content">Adviser content</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Adviser content – Legislation</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#templates" title="Templates">Templates</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Client content</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -47,16 +47,10 @@
           <p><span class="badge">NEW</span>This page is part of <a href="#">our new approach to digital advice</a>.</p>
         </div>
       </aside>
-      <aside class="section-notice__adviser">
-        <h2 class="screenreader">Notice</h2>
-        <div class="section-notice__content">
-          <p><span class="badge">ADVISER</span>This page is part of <a href="#">adviser only</a> content.</p>
-        </div>
-      </aside>
       <div class="main-content">
         <main id="main" role="main" class="main-content__right">
           <div class="title">
-            <h1 class="title__heading js-ref"><span class="title__title">Legislation</span></h1>
+            <h1 class="title__heading js-ref"><span class="title__title">Content page</span></h1>
           </div>
           <div class="title__subheading">This advice is for 
             <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a>
@@ -64,66 +58,18 @@
           <div>
             <p>Introduction is optional, but for a long format advice page it can be useful to summarise the pages content, this should be kept as a relatively short paragraph that covers what this page of content will do.</p>
             <section id="step1">
-              <h2>First use of &lt;h2&gt; in content</h2>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <span id="overlay_button-1">Ut wisi enim ad minim veniam</span>, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"></span></h2>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
             <section id="step2">
-              <h2>Second use of &lt;h2&gt; in content</h2>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"></span></h2>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
             <section id="step3">
-              <h2>Third use of &lt;h2&gt; in content</h2>
-              <p><span id="overlay_button-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span></p>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"></span></h2>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
           </div>
-          <div id="overlay1" style="display:none;" class="overlay">
-            <div class="overlay__modal">
-              <div class="overlay__main">
-                <h3 class="overlay__header">Definition: Overlay title</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-              </div>
-              <div class="overlay__footer">
-                <button id="overlay1_close" type="button" class="btn btn-primary close-button-icon">Close</button>
-              </div>
-            </div>
-          </div>
-          <div id="overlay2" style="display:none;" class="overlay">
-            <div class="overlay__modal">
-              <div class="overlay__main">
-                <h3 class="overlay__header">6.3 Overlay title</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-              </div>
-              <div class="overlay__footer">
-                <button id="overlay2_close" type="button" class="btn btn-primary close-button-icon">Close</button>
-              </div>
-            </div>
-          </div>
-          <script>
-            $('#overlay_button-1').append(function() {
-            	return "<sup class='adviser'></sup>";
-            })
-            $('#overlay_button-2').append(function() {
-            	return "<sup class='adviser'>6.3</sup>";
-            })
-            
-            
-            $(document).ready(function(){
-            	$('#overlay_button-1').click(function() {	    
-            		$('#overlay1').toggle();
-            	});
-            	$('#overlay1_close').click(function() {	    
-            		$('#overlay1').hide();
-            	});
-            	$('#overlay_button-2').click(function() {	    
-            		$('#overlay2').toggle();
-            	});
-            	$('#overlay2_close').click(function() {	    
-            		$('#overlay2').hide();
-            	});
-            });
-          </script>
           <div class="title__subheading--footer">
             <p>Share this page</p><a href="https://twitter.com/share?url=" data-track="Twitter" rel="external" class="a-social-twitter">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external" class="a-social-facebook">Facebook</a><a href="https://plus.google.com/share?url=" data-track="Google+" rel="external" class="a-social-google-plus">Google Plus</a><a href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external" class="a-social-whatsapp">Whatsapp</a>
           </div>
@@ -133,17 +79,16 @@
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
-              <li class="side-nav-beta__sibling"><a href="adviser.html" title="Content page">Content page</a>
+              <li class="side-nav-beta__sibling"><a href="#" title="Content page" class="-current">Content page</a>
+              </li>
+              <li class="side-nav-beta__sibling"><a href="adviser-tool-logged-out.html" title="Advice tool">Advice tool</a>
               </li>
             </ul>
           </ul>
         </nav>
         <nav class="side-nav-beta adviser-nav">
           <ul>
-            <li class="side-nav-beta__heading -active -open"><a><span>Adviser pages</span></a></li>
-            <ul>
-              <li class="side-nav-beta__sibling -current"><a href="adviser-2.html">Legislation</a></li>
-            </ul>
+            <li class="side-nav-beta__heading -active -open"></li>
           </ul>
         </nav>
         <section class="print-only">
