--- a/public/toolbar.html
+++ b/public/toolbar.html
@@ -41,10 +41,7 @@
             <h1 class="title__heading js-ref"><span class="title__title">Content toolbar</span></h1>
           </div>
           <div class="title__subheading">This advice is for 
-            <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a><a href="#!" data-track="References" class="a-social-references">References</a>
-            <!--span.info-extent Extent-->
-            <!--span.info-reviewed Reviewed-->
-            <!--span.info-owner Owner-->
+            <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a>
           </div>
           <div class="articleContent">
             <p>Toolbars sandwich the content with functional icons.</p>
