--- a/public/adviser.html
+++ b/public/adviser.html
@@ -27,6 +27,12 @@
   </head>
   <body>
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
+    <aside class="section-notice__login">
+      <h2 class="screenreader">Notice</h2>
+      <div class="section-notice__content">
+        <button type="button" class="btn btn-small"> <a href="adviser-logged-out.html">Adviser logout</a></button>
+      </div>
+    </aside>
     <header class="main-header">
       <div class="main-header__content main-content"><a href="index.html" title="Citizens Advice home" class="main-header__logo no-print"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&amp;#39;/Static/images/logos/ca-logo_100px.svg.png&amp;#39;;" src="assets/images/ca-logo_100px.svg"></a><img src="assets/images/ca-logo-hz-280px.svg" class="print-only logo"></div>
     </header>
@@ -47,10 +53,7 @@
             <h1 class="title__heading js-ref"><span class="title__title">Content page</span></h1>
           </div>
           <div class="title__subheading">This advice is for 
-            <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a><a href="#!" data-track="References" class="a-social-references">References</a>
-            <!--span.info-extent Extent-->
-            <!--span.info-reviewed Reviewed-->
-            <!--span.info-owner Owner-->
+            <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a><a href="#!" data-track="References" class="a-social-references">References</a><span class="info-extent">Extent</span><span class="info-reviewed">Reviewed</span><span class="info-owner">Owner</span>
           </div>
           <div>
             <p>Introduction is optional, but for a long format advice page it can be useful to summarise the pages content, this should be kept as a relatively short paragraph that covers what this page of content will do.</p>
@@ -126,6 +129,8 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
               <li class="side-nav-beta__sibling"><a href="#" title="Content page" class="-current">Content page</a>
+              </li>
+              <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool">Advice tool</a>
               </li>
             </ul>
           </ul>
