--- a/public/adviser-tool-logged-out.html
+++ b/public/adviser-tool-logged-out.html
@@ -75,7 +75,7 @@
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
-              <li class="side-nav-beta__sibling"><a href="#" title="Content page">Content page</a>
+              <li class="side-nav-beta__sibling"><a href="adviser-logged-out.html" title="Content page">Content page</a>
               </li>
               <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool" class="-current">Advice tool</a>
               </li>
