Minor updates to adviser mockups

--- a/public/adviser-2.html
+++ b/public/adviser-2.html
@@ -38,7 +38,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#templates" title="Templates">Templates</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="adviser.html" title="Adviser content">Adviser content</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Adviser content – Legislation</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#templates" title="Templates">Templates</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Adviser content – Legislation</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -59,20 +59,20 @@
             <h1 class="title__heading js-ref"><span class="title__title">Legislation</span></h1>
           </div>
           <div class="title__subheading">This advice is for 
-            <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a>
+            <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a><a href="#!" data-track="References" class="a-social-references">References</a><span class="info-extent">Extent</span><span class="info-reviewed">Reviewed</span><span class="info-owner">Owner</span>
           </div>
           <div>
             <p>Introduction is optional, but for a long format advice page it can be useful to summarise the pages content, this should be kept as a relatively short paragraph that covers what this page of content will do.</p>
             <section id="step1">
-              <h2>First use of &lt;h2&gt; in content</h2>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <span id="overlay_button-1">Ut wisi enim ad minim veniam</span>, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
             <section id="step2">
-              <h2>Second use of &lt;h2&gt; in content</h2>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
             <section id="step3">
-              <h2>Third use of &lt;h2&gt; in content</h2>
+              <h2 class="ref-heading"><span class="ref-heading__heading">Content subheading</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
               <p><span id="overlay_button-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span></p>
             </section>
           </div>
@@ -134,6 +134,8 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
               <li class="side-nav-beta__sibling"><a href="adviser.html" title="Content page">Content page</a>
+              </li>
+              <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool">Advice tool</a>
               </li>
             </ul>
           </ul>
