Created group field styles

--- a/public/fields.html
+++ b/public/fields.html
@@ -48,6 +48,62 @@
               <p>Using a field for a persons full name is recommended when possible, different cultures structure names in different ways and a Firstname, Surname approach isn't always appropriate.</p>
               <div class="example-box-plain">
                 <fieldset>
+                  <label for="field">Field group</label>
+                  <div class="field-group">
+                    <input id="field" placeholder="£" type="number">
+                    <button class="btn">Week</button>
+                    <button class="btn">Month</button>
+                    <button class="btn">Year</button>
+                  </div>
+                </fieldset>
+              </div>
+              <pre><code class="language-html">&lt;fieldset&gt;
+	&lt;label for="standardField"&gt;Standard field&lt;/label&gt;
+	&lt;input id="standardField" placeholder="" type="text"&gt;
+&lt;/fieldset&gt;</code></pre>
+              <div class="example-box-plain">
+                <fieldset>
+                  <label for="field">Field group</label>
+                  <div class="field-group">
+                    <input id="field" placeholder="£" type="number">
+                    <div class="dropdown">
+                      <select id="exampleSelect1">
+                        <option>Daily</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                      </select>
+                    </div>
+                  </div>
+                </fieldset>
+              </div>
+              <pre><code class="language-html">&lt;fieldset&gt;
+	&lt;label for="standardField"&gt;Standard field&lt;/label&gt;
+	&lt;input id="standardField" placeholder="" type="text"&gt;
+&lt;/fieldset&gt;</code></pre>
+              <div class="example-box-plain"></div>
+              <fieldset>
+                <label for="field">Field group</label>
+                <div class="field-group">
+                  <input id="field" placeholder="£" type="number">
+                  <label class="radio radio--inline">
+                    <input checked name="radio-inline" type="radio" value="option1">Week
+                  </label>
+                  <label class="radio radio--inline">
+                    <input name="radio-inline" type="radio" value="option2">Month
+                  </label>
+                  <label class="radio radio--inline">
+                    <input name="radio-inline" type="radio" value="option3">Year
+                  </label>
+                </div>
+              </fieldset>
+              <pre><code class="language-html">&lt;fieldset&gt;
+	&lt;label for="standardField"&gt;Standard field&lt;/label&gt;
+	&lt;input id="standardField" placeholder="" type="text"&gt;
+&lt;/fieldset&gt;</code></pre>
+              <div class="example-box-plain">
+                <fieldset>
                   <label for="standardField">Standard field</label>
                   <input id="standardField" placeholder="" type="text">
                 </fieldset>
