--- a/public/callout.html
+++ b/public/callout.html
@@ -53,66 +53,78 @@
               <div class="callout">
                 <h3>Callout unstyled</h3>
                 <p>This callout does not require an Aria tag but should be labeled with a clear heading.</p>
-                <p>This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.</p><a class="callout__link">Callout link</a>
+                <p>This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.</p>
+                <!--a.callout__link Callout link-->
               </div>
             </div>
             <pre><code class="language-html">&lt;div class="callout"&gt;
 	&lt;h3&gt;Callout unstyled&lt;/h3&gt;
 	&lt;p&gt;This callout does not require an Aria tag but should be labeled with a clear heading.&lt;/p&gt;
 	&lt;p&gt;This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.&lt;/p&gt;
-	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
-&lt;/div&gt;</code></pre>
-            <div class="example-box-plain">
-              <div class="callout--confirmation callout--icon">
-                <h3>Callout confirmation</h3>
-                <p>This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'</p>
-                <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p><a class="callout__link">Callout link</a>
-              </div>
-            </div>
-            <pre><code class="language-html">&lt;div class="callout--confirmation callout--icon"&gt;
-	&lt;h3&gt;Callout confirmation&lt;/h3&gt;
-	&lt;p&gt;This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'&lt;/p&gt;
-	&lt;p&gt;The icon is optional and can be including by adding the &lt;code&gt;.callout--icon&lt;/code&gt; class.&lt;/p&gt;
-	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--warning">
                 <h3>Callout warning</h3>
                 <p>Use the Aria tag <code>aria-label="Important"</code>.</p>
-                <p>The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.</p><a class="callout__link">Callout link</a>
+                <p>The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.</p>
+                <!--a.callout__link Callout link-->
               </div>
             </div>
             <pre><code class="language-html">&lt;div class="callout--warning"&gt;
 	&lt;h3&gt;Callout warning&lt;/h3&gt;
 	&lt;p&gt;Use the Aria tag &lt;code&gt;aria-label="Important"&lt;/code&gt;.&lt;/p&gt;
 	&lt;p&gt;The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.&lt;/p&gt;
-	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
-              <div class="callout--alert callout--icon">
+              <div class="callout--alert">
                 <h3>Callout alert</h3>
                 <p>Use the Aria tag <code>aria-label="Help"</code>.</p>
                 <p>This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.</p>
-                <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p><a class="callout__link">Callout link</a>
+                <!--a.callout__link Callout link-->
+              </div>
+              <div class="callout--alert callout--icon">
+                <h3>Callout alert with icon</h3>
+                <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.de aria-label="Help"].</p>
               </div>
             </div>
             <pre><code class="language-html">&lt;div class="callout--alert callout--icon"&gt;
 	&lt;h3&gt;Callout alert&lt;/h3&gt;
 	&lt;p&gt;Use the Aria tag &lt;code&gt;aria-label="Help"&lt;/code&gt;.&lt;/p&gt;
 	&lt;p&gt;This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.&lt;/p&gt;
+&lt;/div&gt;
+&lt;div class="callout--alert callout--icon"&gt;
+	&lt;h3&gt;Callout alert with icon&lt;/h3&gt;
 	&lt;p&gt;The icon is optional and can be including by adding the &lt;code&gt;.callout--icon&lt;/code&gt; class.&lt;/p&gt;
-	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
+&lt;/div&gt;</code></pre>
+            <div class="example-box-plain">
+              <div class="callout--confirmation">
+                <h3>Callout confirmation</h3>
+                <p>This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'</p>
+              </div>
+              <div class="callout--confirmation callout--icon">
+                <h3>Callout confirmation with icon</h3>
+                <p>The icon is optional and can be including by adding the <code>.callout--icon</code> class.</p>
+                <!--a.callout__link Callout link-->
+              </div>
+            </div>
+            <pre><code class="language-html">&lt;div class="callout--confirmation"&gt;
+	&lt;h3&gt;Callout confirmation&lt;/h3&gt;
+	&lt;p&gt;This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'&lt;/p&gt;
+&lt;/div&gt;
+&lt;div class="callout--confirmation callout--icon"&gt;
+	&lt;h3&gt;Callout confirmation with icon&lt;/h3&gt;
+	&lt;p&gt;The icon is optional and can be including by adding the &lt;code&gt;.callout--icon&lt;/code&gt; class.&lt;/p&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--quote">
                 <h3>Callout quote</h3>
-                <p>Also referred to as Blockquote, this style is when a quote needs to be displayed.</p><a class="callout__link">Callout link</a>
+                <p>Also referred to as Blockquote, this style is when a quote needs to be displayed.</p>
+                <!--a.callout__link Callout link-->
               </div>
             </div>
             <pre><code class="language-html">&lt;div class="callout--quote"&gt;
 	&lt;h3&gt;Callout quote&lt;/h3&gt;
 	&lt;p&gt;Also referred to as Blockquote, this style is when a quote needs to be displayed.&lt;/p&gt;
-	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
 &lt;/div&gt;</code></pre>
             <h2>Callouts combined</h2>
             <p>These callouts can be combined both consecutively or combined, someexamples are shown below.</p>
